; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_amd_iommu_init.c_init_translation_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_amd_iommu_init.c_init_translation_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amd_iommu = type { i32, i64 }

@MMIO_CONTROL_OFFSET = common dso_local global i64 0, align 8
@CONTROL_IOMMU_EN = common dso_local global i32 0, align 4
@AMD_IOMMU_FLAG_TRANS_PRE_ENABLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.amd_iommu*)* @init_translation_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_translation_status(%struct.amd_iommu* %0) #0 {
  %2 = alloca %struct.amd_iommu*, align 8
  %3 = alloca i32, align 4
  store %struct.amd_iommu* %0, %struct.amd_iommu** %2, align 8
  %4 = load %struct.amd_iommu*, %struct.amd_iommu** %2, align 8
  %5 = getelementptr inbounds %struct.amd_iommu, %struct.amd_iommu* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @MMIO_CONTROL_OFFSET, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @readq(i64 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @CONTROL_IOMMU_EN, align 4
  %12 = shl i32 1, %11
  %13 = and i32 %10, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %1
  %16 = load i32, i32* @AMD_IOMMU_FLAG_TRANS_PRE_ENABLED, align 4
  %17 = load %struct.amd_iommu*, %struct.amd_iommu** %2, align 8
  %18 = getelementptr inbounds %struct.amd_iommu, %struct.amd_iommu* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = or i32 %19, %16
  store i32 %20, i32* %18, align 8
  br label %21

21:                                               ; preds = %15, %1
  ret void
}

declare dso_local i32 @readq(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
